WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50541
[GTK] using shadows leaks memory
https://bugs.webkit.org/show_bug.cgi?id=50541
Summary
[GTK] using shadows leaks memory
Kristoffer Kleine
Reported
2010-12-05 11:30:27 PST
Created
attachment 75634
[details]
archive with some example apps to reproduce the bug WebkitGtk seems to leak memory when using css shadows. On my machine with webkit-nightly (72146) it leaks about 0.3 Mb/s when doing some moderate clicking on the element in the example. To reproduce do: 1) Load the url (
http://droppy.lophus.org/cvDCE-index.html
) in Epiphany and click or hover the element and watch the memory increase. 2) see the attached examples (./build.sh to compile and ./example or python example.py to run). The symptoms are the same here, when clicking or hovering.
Attachments
archive with some example apps to reproduce the bug
(1.36 KB, application/x-bzip)
2010-12-05 11:30 PST
,
Kristoffer Kleine
no flags
Details
Proposed patch
(2.87 KB, patch)
2010-12-06 07:13 PST
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sebastian Billaudelle
Comment 1
2010-12-05 11:40:17 PST
Same for me here! With Midori, Epiphany and the examples attached by Krisoffer.
Alejandro G. Castro
Comment 2
2010-12-06 07:13:58 PST
Created
attachment 75690
[details]
Proposed patch Thanks for reporting, I've fixed the two leaks in the shadows code found with valgrind.
Martin Robinson
Comment 3
2010-12-06 07:40:23 PST
Comment on
attachment 75690
[details]
Proposed patch Awesome. Thanks!
Alejandro G. Castro
Comment 4
2010-12-06 08:02:35 PST
landed
http://trac.webkit.org/changeset/73367
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug