2010-12-06  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] using shadows leaks memory
        https://bugs.webkit.org/show_bug.cgi?id=50541

        Fixed leaks in the shadow code.
        * platform/graphics/cairo/CairoUtilities.cpp:
        (WebCore::drawPatternToCairoContext): adoptRef instead of just
        getting a new reference.
        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::drawPathShadow): handle cairo_path_t with smart
        pointers.

Canonical link: https://commits.webkit.org/63790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73369 268f45cc-cd09-0410-ab3c-d52691b4dbfc